Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31925

mysqld_upgrade --check-if-upgrade-is-needed leaks files

Details

    Description

      Hi,

      we discovered that mysql_upgrade with check-if-upgrade-is-needed leaks files under the tmp directory. It will like always create the mysql_upgrade-****** defaults-file but never clean it up.

      should easily be fixable by something like that:

        if (opt_check_upgrade)
          free_used_memory();
          exit(upgrade_already_done(0) == 0);
      

      see code

      Attachments

        Activity

          People

            danblack Daniel Black
            croser Christian Roser
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.