MDEV-31925 Fix for File Leak in mysql_upgrade with --check-if-upgrade-is-needed Option

This commit addresses the file leakage problem encountered with the mysql_upgrade --check-if-upgrade-is-needed command.